# rust-inaturalist

./: Cargo.toml  README.md  config.json  generate-crate.sh  inaturalist-swagger.json
crate/: Cargo.toml  README.md
crate/.openapi-generator/: FILES
crate/docs/: AutocompleteTaxon.md  AutocompleteTaxonAllOf.md  BaseResponse.md  Color.md  Comment.md  ConservationStatus.md  CoreTaxon.md  DateDetails.md  EstablishmentMeans.md  Fave.md  FieldValue.md  Identification.md  IdentificationsApi.md  IdentificationsResponse.md  IdentificationsResponseAllOf.md  Message.md  MessagesApi.md  MessagesResponse.md  MessagesResponseAllOf.md  MessagesUnreadGet200Response.md  NearbyPlacesResponse.md  NearbyPlacesResponseAllOf.md  NearbyPlacesResponseAllOfResults.md  NonOwnerIdentification.md  Observation.md  ObservationFieldValuesApi.md  ObservationPhoto.md  ObservationPhotosApi.md  ObservationTaxon.md  ObservationTaxonAllOf.md  ObservationTilesApi.md  ObservationsApi.md  ObservationsObserversResponse.md  ObservationsObserversResponseAllOf.md  ObservationsObserversResponseAllOfResults.md  ObservationsResponse.md  ObservationsResponseAllOf.md  ObservationsShowResponse.md  ObservationsShowResponseAllOf.md  Photo.md  (+63 more)
crate/src/apis/: annotations_api.rs  comments_api.rs  configuration.rs  controlled_terms_api.rs  flags_api.rs  identifications_api.rs  messages_api.rs  mod.rs  observation_field_values_api.rs  observation_photos_api.rs  observation_tiles_api.rs  observations_api.rs  photos_api.rs  places_api.rs  polygon_tiles_api.rs  posts_api.rs  project_observations_api.rs  projects_api.rs  search_api.rs  taxa_api.rs  users_api.rs  utf_grid_api.rs
crate/src/models/: autocomplete_taxon.rs  base_response.rs  mod.rs  (+99 more)
inaturalist/: Cargo.toml  README.md
inaturalist-oauth/: Cargo.toml  README.md
inaturalist-oauth/src/: lib.rs
inaturalist/.openapi-generator/: FILES
inaturalist/docs/: Annotation.md  AnnotationsApi.md  AutocompleteTaxon.md  Comment.md  CommentsApi.md  ControlledTermsApi.md  CorePlace.md  Error.md  Fave.md  Flag.md  FlagsApi.md  Identification.md  IdentificationTaxonChange.md  IdentificationsApi.md  IdentificationsResponse.md  Message.md  MessagesIdGet200Response.md  MessagesResponse.md  ModeratorAction.md  NearbyPlacesResponse.md  NearbyPlacesResponseAllOfResults.md  NonOwnerIdentification.md  Observation.md  ObservationTilesApi.md  ObservationsApi.md  ObservationsObserversResponse.md  ObservationsResponse.md  Outlink.md  PhotosApi.md  PlacesResponse.md  PointGeoJson.md  PolygonGeoJson.md  PolygonTilesApi.md  PostAnnotationAnnotation.md  PostComment.md  PostCommentComment.md  PostFlag.md  PostFlagFlag.md  PostIdentification.md  PostIdentificationIdentification.md  (+22 more)
(+72 files in other folders)
