[package]
name = "inaturalist"
version = "0.3.0"
authors = ["Corey Farwell", "OpenAPI Generator team and contributors"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/frewsxcv/rust-inaturalist"
description = "iNaturalist API bindings"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde"] }
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]
