[package]
name = "inaturalist"
edition = "2021"
version = "0.6.0"
authors = ["Corey Farwell", "OpenAPI Generator team and contributors"]
license = "MIT/Apache-2.0"
repository = "https://github.com/frewsxcv/rust-inaturalist"
description = "iNaturalist API bindings"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
reqwest = { version = "^0.12", default-features = false, features = [
    "json",
    "multipart",
] }
