[package]
name = "inaturalist-oauth"
version = "0.1.1"
license = "MIT/Apache-2.0"
repository = "https://github.com/frewsxcv/rust-inaturalist"
edition = "2024"
description = "A Rust library for OAuth authentication with iNaturalist"

[dependencies]
oauth2 = "4.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2.3.1"
opener = "0.6"
log = "0.4.20"
httparse = "1.10.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
