[package]
name = "inaturalist"
version = "0.8.0"
authors = ["Corey Farwell", "OpenAPI Generator team and contributors"]
license = "MIT/Apache-2.0"
repository = "https://github.com/frewsxcv/rust-inaturalist"
edition = "2024"
description = "iNaturalist API bindings"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
tokio = { version = "^1.46.0", features = ["fs"] }
tokio-util = { version = "^0.7", features = ["codec"] }
reqwest = { version = "^0.12", default-features = false, features = ["json", "multipart", "stream"] }
